--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "smart-tooltip",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Intelligently show tooltip based on container position",
   "main": "index.js",
+  "keywords": ["tooltip","smart-tooltip","intelligent","aware","content"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Justice Addico",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/A-Justice/smart-tooltip"
+  }
 }
